--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
             src="./assets/images/arrow_left.png"
             class="arrow_left"
             id="arrow_left"
+            alt="Fleche de gauche"
           />
           <img
             src="./assets/images/arrow_right.png"
             class="arrow_right"
             id="arrow_right"
+            alt="Fleche de Droite"
           />
         </div>
         <img
